<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Ideal Type Worldcup</string>
    <string name="app_id">573446772733849</string>
    <string name="loading_msg">Loading.. </string>
    <string name="main_go">Go! Worldcup!</string>
    <string name="main_rank">Ranking</string>
    <string name="main_question">Questions</string>
    <string name="main_login">  Log in</string>
    <string name="main_logout">  Log out</string>
    <string name="friend_loading_fail">Filed to load Friend Data</string>
    <string name="action_settings">Settings</string>
    <string name="login_progress_msg">Try to login.. :)</string>
    <string name="go_default_title">Choose Question</string>
    <string name="comment_reg_btn">Regist</string>
    <string name="comment_remove_alert_msg">Are you sure? :()</string>
    <string name="comment_total_txt">Total : </string>
    <string name="comment_reg_empty_msg">No typed comment! :(</string>
    <string name="comment_reg_complete_msg">Commented! :)</string>
    <string name="comment_reg_fail_msg">Failed to comment! :(</string>
    <string name="comment_remove_complete_msg">Removed! :)</string>
    <string name="comment_remove_failed_msg">Failed to remove comment! :(</string>
    <string name="need_to_fb_login">Need to Login with Facebook :o</string>
    <string name="question_choose_round">Choose round</string>
    <string name="question_choose_type">Choose Question Type</string>
    <string name="question_choose_type1">GENERAL</string>
    <string name="question_choose_type2">PUBLIC (with Extra Exp)</string>
    <string name="question_loading">Loading Questions Data</string>
    <string name="question_any_question">Please, select any question. :(</string>
    <string name="question_not_good">Wrong Question. :(</string>
    <string name="question_not_enough_photo">Not enough pictures</string>
    <string name="question_fregist_popup_msg">Please, type your First Question, unless You can not upload your own pictures :)</string>
    <string name="question_out">Without saving yout question data, chachged data will be gone. Be sure to save your worldcup by pressing save button. Quit?</string>
    <!--
    <string name="question_first_msg1">First, Select round on your left side. You can choose 4Round to 32Round in max. Remember. You have to 4 selected imgages at least if you choose 4Round</string>
    <string name="question_first_msg2">Second, Choose Question Type on your left side. Gerneral Question is for your friend and Public Question will be shown to all users.</string>
    <string name="question_first_msg3">Third, Touch your empty image box on your left side and upload. It will be stay as long as you wnt, if you check box, that image should be candidate for your Question</string>
    <string name="question_first_msg4">Fourth, if you want to modify question, touch the pencil image on selected question row on your side.</string>
    <string name="question_first_msg5">Finally , to save all you have done, touch the check image on selected question row on your right side. if checked images are more than round number, the question will be exposed. </string>
    <string name="question_first_msg6">To remove your question, please touch X image on selected question row on your right side. Good Luck :)</string>
    -->
    
    <!-- Help Messages -->
    <string name="h1_1">1. Create your own Worldcup name. To complete Your own Worldcup, you need to upload images and check the box belonged image. :o</string>
    <string name="h1_2">1. Create your own Worldcup name. </string>
    <string name="h1_3">1. You can see what you make</string>
    <string name="h2_1">2. Select Worldcup Round. You can choose 4Round to 32Round in max</string>
    <string name="h2_2">3. Select Worldcup Type. Gerneral Question is for your friend and Public Question will be shown to all users.</string>
    <string name="h3_1">4. Touch empty imageSlot to upload world image. It comes from SD Card.</string>
    <string name="h3_2">4. Touch empty imageSlot to upload world image. It comes from SD Card.</string>
    <string name="h3_3">5. Check to belong to your own Worldcup </string>
    <string name="h3_4">6. If you do not like your image, just touch image slot and remove it! </string>
    <string name="h4_1">7. You can remove Your world cup </string>
    <string name="h4_2">8. Make antother Worldcup! </string>
    <string name="h4_3">8. Finally! Save your Worldcup and share it! Good Luck! :)</string>
    <string name="h5_1">9. PS. To expand your image slot and to make public Worldcup, need to level up. To Lelvel up, Your friend need to join your Worldcup. </string>
    
    
    <string name="question_regist_popup_msg">Make your own question :)</string>
    <string name="question_modify_msg1">Question information is saved. :)</string>
    <string name="question_modify_msg2">Question information is saved, but images is not enough. :o</string>
    <string name="question_type_warning">Above Level 40, you are available to create public question. :o</string>
    <string name="confirm_remove_question">Are you sure? All relative information will be gone, but images will be fine.</string>
    <string name="network_error">Network error occurred :(</string>
    <string name="q_img_type_error">Image type is not acceptable. :( </string>
    <string name="q_img_upload_success">Image uploaded :) </string>
    <string name="rank_noqlist_msg">No question Data :() </string>
    <string name="image_uploading">Uploading Image :)</string>
    <string name="warning_remove_img_msg">All relative comment and rank which belongs to this image will be gone. :o</string>
    <string name="confirm_msg">Confirm</string>
    <string name="cancle_msg">Cancle</string>
    <string name="select_your_question">Select Question Type</string>
    <string name="type_all">All</string>
    <string name="type_public">Public</string>
    <string name="type_friend">Only Friends</string>
    <string name="type_me">Only Me</string>

</resources>