<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/main_go"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_send_now"
        android:text="@string/main_go" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/main_go" >

        <Button
            android:id="@+id/main_rank"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_action_important"
            android:text="@string/main_rank" />

        <Button
            android:id="@+id/main_question"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_rank"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_action_help"
            android:text="@string/main_question" />

        <Button
            android:id="@+id/main_loginout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_question"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/icn_facebook"
            android:text="@string/main_login" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_below="@id/main_go"
        android:layout_marginTop="10dp" >

        <ListView
            android:id="@+id/main_lv"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

</RelativeLayout>