<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/cmt_top_rl"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <EditText
            android:id="@+id/cmt_reg_edt"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:maxLines="1" />

        <Button
            android:id="@+id/cmt_reg_btn"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/comment_reg_btn"
            android:textSize="12sp" >
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cmt_middle_rl"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/cmt_top_rl" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/comment_total_txt"
            android:textColor="#000000" />

        <Button
            android:id="@+id/goview_rankbtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_action_important"
            android:text="@string/main_rank" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/cmt_middle_rl" >

        <ListView
            android:id="@+id/cmt_lv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@null"
            android:dividerHeight="0dip" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>